// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button Tests should match the snapshot with the checked radio button 1`] = `
<input
  checked={true}
  className="sc-iBkjds hYrlUh"
  data-testid="radio-radio"
  id="radio"
  onChange={[MockFunction]}
  type="radio"
/>
`;

exports[`Radio Button Tests should match the snapshot with the unchecked radio button 1`] = `
<input
  checked={false}
  className="sc-iBkjds hYrlUh"
  data-testid="radio-radio"
  id="radio"
  onChange={[MockFunction]}
  type="radio"
/>
`;
